Fix: spacing on small screen in hero

--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -19,13 +19,15 @@
 .content{
     display: flex;
     height: auto;
+    padding: 0 1.5rem;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap-reverse;
 }
 
 .text{
-    width: 335px;
+    width: 340px;
+    background-color: brown;
 }
 
 .title{
@@ -56,7 +58,11 @@
     background-color: var(--tertiary-bg);
 }
 .hero_image{
-    width: 350px;
+    width: 400px;
+    background-color: aqua;
+}
+.image{
+    width: 100%;
 }
 
 @media screen and (min-width: 768px){
@@ -68,7 +74,7 @@
         font-size: 1.8rem;
     }
     .hero_image{
-        width: 600px;
+        width: 500px;
     }
 }
 
